test/cli/test-validating-policy/pss-restrict-sysctls/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pss-restrict-sysctls
policies:
- policy.yaml
resources:
- resources.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: restrict-sysctls
  resources:
  - unsafe-sysctl
  - mixed-sysctls
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: restrict-sysctls
  resources:
  - all-safe-sysctls
  - new-safe-sysctls
  - no-sysctls
  result: pass
